
- changed Partial::erase to return an iterator refering
to the position after the erasure, or end if the last
Breakpoint it erased.

- added Partial constructor from a half-open range
delimited by Partial::const_iterators (documented too).

- added new, simpler, Python 2.2-style iterators to the
scripting interface. Eventually these will replace the
old STL-style ones, but for now they coexist.

- added some new functores to PartialUtils and 
BreakpointUtils.

-------------------------------------------------------
changes since 1.0.1 release:

- moved compile-time type checks from FourierTransform.C
to configure.in, so the former now compiles even with 
wimpy compilers

- added check for template member support to configure.in

- changed name of (Python) loriscmodule to _loris, to
keep up with changes to SWIG

- added "collating" of unlabeled Partials to the
distillation operation. This combines unlabeled Partials
into groups of non-overlapping (in time) Partials, assigned
an unused label (greater than the label associated with any
frequency channel), and fused into a single Partial per
group. "Collating" is a bit like "sifting" but
non-overlapping Partials are grouped without regard to
frequency proximity. This algorithm produces the
smallest-possible number of collated Partials. Thanks to
Ulrike Axen for providing this optimal algorithm.

- Perl module can now be built, optionally, with the 
--with-perl option to configure. It is still untested,
but a very minimal test is performed in make check,just
to make sure that it can be loaded. The perl module
is (temporarily) called perLoris.

- Python sequences can be used as arguments to dilate, 
other languages still need strings, but typemaps could
be added for them too.

- autodetection of scripting langauges has been improved

-------------------------------------------------------
changes since 1.0 release:

- added compile-time checks to ensure that fftw_complex
is compatible with std::compelx<double>, in 